samples/_failures_safe/1761305193_7db237_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15001df1.c: In function ‘main’:
./samples/SAFE/__tmp_15001df1.c:170:13: error: expected ‘;’ at end of input
  170 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_15001df1.c:170:5: error: expected declaration or statement at end of input
  170 |     return 0
      |     ^~~~~~
